# sqle/docs/swagger.yaml
@@ -2036,6 +2036,7 @@ definitions:
         type: integer
       data:
         $ref: '#/definitions/v1.SqlAnalysis'
+        description: V1版本不能引用V2版本的结构体,所以只能复制一份
         type: object
       message:
         example: ok
@@ -4604,6 +4605,8 @@ definitions:
       number:
         type: integer
       rollback_sql:
+        type: string
+      sql_source_file:
         type: string
     type: object
   v2.BatchCancelWorkflowsReqV2:
@@ -11360,6 +11363,10 @@ paths:
         - sql_audit_record
         in: query
         name: filter_source
+        type: string
+      - description: fuzzy search audit plan name
+        in: query
+        name: fuzzy_search_audit_plan_name
         type: string
       - description: audit level
         enum:
